# arcg_cc

./: .gitignore  CLAUDE.md  Install_ARCG_CC.ps1  README.md  TODO.md  control_panel.py  exporter.py  pyproject.toml
curve_fitter/: main.py  pyproject.toml  requirements.txt  test_constraints.py  test_core.py  test_gui.py  test_shapes.py
curve_fitter/core/: __init__.py  exporter.py  fitter.py  loader.py  params.py  preprocess.py  session.py
curve_fitter/ui/: __init__.py  _widgets.py  control_panel.py  fit_worker.py  main_window.py  param_window.py  plot_style_dialog.py  plot_widget.py
dev/: HANDOFF_FOR_CLAUDE_CODE.md
doc/: arcg_algorithm.md  rtx_spec.md
icons/: arcg_cc.icns
installer/: ARCG_CC_setup.iss
sample/: arc_120deg.csv  j_shape.csv  s_curve.csv
windows/: ARCG_CC.ps1  ARCG_CC.vbs  ARCG_CC_debug.bat  README.md  create_shortcut.vbs
