[project]
name = "arcg-cc"
version = "0.2.0"
description = "Arc & Curve G1 Continuous Curve Fitter"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "ezdxf>=1.3",
    "polars>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
arcg-cc = "curve_fitter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
